--- a/SQL/projet/templates/tri.html
+++ b/SQL/projet/templates/tri.html
@@ -6,11 +6,14 @@
 
 {% block content %}
 
+<p>{{ tri }}</p>
+
 {% for result in repetition %}
 
 <a href="{{ url_for('piece', idP=result[0]) }}">
 	<img class="piece" src="{{result[14]}}" title="{{result[6]}}">
 	<img class="piece" src="{{result[15]}}" title="{{result[6]}}">
+	<p> {{ cle[0] }} : {{ result[cle[1]] }} </p>
 </a>
 {% endfor %}
 
