--- a/SQL/projet/templates/piece.html
+++ b/SQL/projet/templates/piece.html
@@ -7,6 +7,7 @@
 {% block content %}
 
 {% for result in repetition %}
+
 <h1>{{result[1]}}</h1>
 
 <p>
@@ -25,11 +26,13 @@
 		<li>Démonétisée : {{result[12]}}</li>
 		<li>Indice de rareté numista : {{result[13]}}</li>
 	</ul>
-<img class="piece" src="{{result[14]}}">
-<img class="piece" src="{{result[15]}}">
+</p>
+
+<p>
+	<img class="piece_result" src="{{result[14]}}">
+	<img class="piece_result" src="{{result[15]}}">
 </p>
 	
-
 {% endfor %}
 
 <footer>
