--- a/SQL/projet/templates/piece.html
+++ b/SQL/projet/templates/piece.html
@@ -29,8 +29,8 @@
 </p>
 
 <p>
-	<img class="piece_result" src="{{result[14]}}">
-	<img class="piece_result" src="{{result[15]}}">
+	<img class="piece_result" src="{{result[14]}}" title="{{result[1]}}" alt="pièce n°{{result[0]}}">
+	<img class="piece_result" src="{{result[15]}}" title="{{result[1]}}" alt="pièce n°{{result[0]}}">
 </p>
 	
 {% endfor %}
