--- a/SQL/projet/static/css_de_la_mort_qui_tue.css
+++ b/SQL/projet/static/css_de_la_mort_qui_tue.css
@@ -1,13 +1,12 @@
 body {
     background-color: #FABC20;
-	
 }
 
 
 h1 {
     width: 70%;
     margin: auto;
-    background-color: #fff;
+    background-color: white;
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -96,4 +95,52 @@ h1 {
 
 }
 
+.preloader{
+	position: fixed;
+	top: 0;
+	left:0;
+	width: 100%;
+	height: 100%;
+	background-color: #444;
+	z-index: 20;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
 
+.preloader h1{
+	background-color: red;
+	color: white;
+	font-size: 3.5rem;
+	font-family: "Poppins", sans-serif;
+	text-align: center;		
+}
+
+.preloader .loader{
+	display: block;
+	width: 64px;
+	height: 64px;
+	position: relative;
+}
+
+.preloader .loader::before{
+	content: '';
+	width: 64px;
+	height: 64px;
+	position: absolute;
+	border: 6px solid white;
+	border-color: white transparent white transparent;
+	border-radius: 50%;
+	animation: loader 1s infinite ease-in-out;
+}
+
+@keyframes loader {
+	0%{
+		transform: rotate(0deg);
+	}
+	
+	100%{
+		transform: rotate(360deg);
+	}	
+}
