--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -85,9 +85,10 @@
 
 {% for result in repetition %}
    <a href="{{ url_for('piece', idP=result[0]) }}">
-	<img class="piece" src="{{ result[1] }}" alt="Avers">
+	<img class="piece" src="{{ result[1] }}" alt="Avers de la pièce n°{{result[0]}}" title="{{result[1]}}">
    </a>
 {% endfor %}
 
+<footer>Attention, les recherches que vous faîtes correspondent à ce qui ressemble à ce que vous avez écrit; pour plus de précision dans vos recherches merci de les faires grâces aux recherches spécifiques.</footer>
 
 {% endblock %}
