--- a/SQL/projet/static/css_de_la_mort_qui_tue.css
+++ b/SQL/projet/static/css_de_la_mort_qui_tue.css
@@ -6,11 +6,15 @@ body {
 h1 {
     width: 70%;
     margin: auto;
-    background-color: white;
+    background-color: grey;
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
+	border: groove 1em #ff4606;
+	border-radius: 2em;
 }
+
+/* CCS pour l'affichage des pièces */
 
 .piece:hover {
     width: 12vw;
@@ -20,12 +24,19 @@ h1 {
 	width : 9vw;
 }
 
+.piece_recherche{
+	width : 15vw;
+}
+
+
 .piece_result{
 	width : 30vw;
 	border-style: inset;
 	border-width: 8px;
-	float: right
+	float: right;
 }
+
+/* CCS pour le bouton multicolore */
 
 .glow-on-hover {
     width: 220px;
@@ -38,7 +49,6 @@ h1 {
     position: relative;
     z-index: 0;
     border-radius: 10px;
-    
 }
 
 .glow-on-hover:before {
@@ -95,6 +105,9 @@ h1 {
 
 }
 
+
+/* CSS pour l'écran de chargement: */
+
 .preloader{
 	position: fixed;
 	top: 0;
@@ -114,7 +127,8 @@ h1 {
 	color: white;
 	font-size: 3.5rem;
 	font-family: "Poppins", sans-serif;
-	text-align: center;		
+	text-align: center;	
+	border: 6px solid white;	
 }
 
 .preloader .loader{
