--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -83,11 +83,13 @@
 	<a href="{{ url_for('pieceotheque') }}"> Toutes mes pièces </a>  
 </button>
 
+<div>
 {% for result in repetition %}
-   <a href="{{ url_for('piece', idP=result[0]) }}">
-	<img class="piece" src="{{ result[1] }}" alt="Avers de la pièce n°{{result[0]}}" title="{{result[1]}}">
-   </a>
+<a href="{{ url_for('piece', idP=result[0]) }}">
+	<img class="piece_recherche" src="{{ result[1] }}" alt="Avers de la pièce n°{{result[0]}}" title="{{result[1]}}">
+</a>
 {% endfor %}
+</div>
 
 <footer>Attention, les recherches que vous faîtes correspondent à ce qui ressemble à ce que vous avez écrit; pour plus de précision dans vos recherches merci de les faires grâces aux recherches spécifiques.</footer>
 
