--- a/SQL/projet/static/css_accueil.css
+++ b/SQL/projet/static/css_accueil.css
@@ -1,14 +1,16 @@
 body{
     background-image: url("coin_flip.gif");
-    background-size: cover;
-    height: 100vh;
-	width:50%;
+    background-size: 50vw;
 }
 
-a{
-	border: dashed;
-	border-width: 2px 4px;
-	border-radius: 40px;
-	background-color: white;
-	width: 50%;
+h1{
+    width: 70%;
+    margin: auto;
+    background-color: #1D041F;
+	color: white;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+	border-radius: 2em;
+	margin: 10vw 0vw 0vw 25vw;
 }
