--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -36,8 +36,8 @@
 {% for result in repetition %}
 
 <a href="{{ url_for('piece', idP=result[0]) }}">
-	<img class="piece" src="{{result[1]}}" title="{{result[1]}}" alt="pièce n°{{result[0]}}">
-	<img class="piece" src="{{result[2]}}" title="{{result[2]}}" alt="pièce n°{{result[0]}}">
+	<img id="piece_pieceotheque" src="{{result[1]}}" title="{{result[1]}}" alt="pièce n°{{result[0]}}">
+	<img id="piece_pieceotheque" src="{{result[2]}}" title="{{result[2]}}" alt="pièce n°{{result[0]}}">
 </a>
 
 {% endfor %}
