--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -80,13 +80,13 @@
 
 
 <button class="glow-on-hover" type="button" >
-	<a href="{{ url_for('pieceotheque') }}"> Toutes mes pièces </a>  
+	<a href="{{ url_for('pieceotheque') }}"> Toutes mes pièces </a>
 </button>
 
 <div>
 {% for result in repetition %}
 <a href="{{ url_for('piece', idP=result[0]) }}">
-	<img class="piece_recherche" src="{{ result[1] }}" alt="Avers de la pièce n°{{result[0]}}" title="{{result[1]}}">
+	<img id="piece_recherche" src="{{ result[1] }}" alt="Avers de la pièce n°{{result[0]}}" title="{{result[1]}}">
 </a>
 {% endfor %}
 </div>
