--- a/SQL/projet/templates/piece.html
+++ b/SQL/projet/templates/piece.html
@@ -30,7 +30,7 @@
 	</p>
 </div>
 	
-<div id="piece_piece">
+<div id="placement_piece">
 	<p>
 		<img class="piece" src="{{result[14]}}" title="{{result[1]}}" alt="pièce n°{{result[0]}}" >
 		<img class="piece" src="{{result[15]}}" title="{{result[1]}}" alt="pièce n°{{result[0]}}" >
