--- a/SQL/projet/templates/vide.html
+++ b/SQL/projet/templates/vide.html
@@ -5,6 +5,7 @@
 {% block title %}Il n'y a rien ici{% endblock %}
 
 {% block content %}
+<img src="static\404.png"> </img>
 <p>Pas de résultats, veuillez <a href="{{ url_for('recherche') }}"> réessayer.</a></p>
 
 
