--- a/SQL/projet/templates/base.html
+++ b/SQL/projet/templates/base.html
@@ -9,8 +9,8 @@
 	</head>
 	
 	<body>
-		{% block content %}{% endblock %}
-
+		{% block content %}
+		{% endblock %}
 		<script src="{{ url_for('static', filename='script.js') }}"></script>
 
 	</body>
