--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -10,7 +10,7 @@
 <h2> Bonjour, vous êtes sur le site catalogant mes pièces de tous types. </h2>
 
 <h2>
-<a href="{{ url_for('accueil') }}"> Recommencez alors !</a>
+<a href="{{ url_for('accueil') }}"> Accueil</a>
 </h2>
 	
 
