--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -11,25 +11,29 @@
 	<span class="loader"></span>
 </div>
 
+
+<div id="bouton_pieceotheque">
 <input type="radio" id="desc" name="tri" value="descendant" checked onclick="inversement1()" />
 	<label for="oui">Tri décroissant</label>
-<input type="radio" id="asc" name="tri" value="ascendant" checked=""  onclick="inversement2()"/>
+<input type="radio" id="asc" name="tri" value="ascendant" checked=""  onclick="inversement2()" />
 	<label for="oui">Tri croissant</label>
-		
-<div id="id_div">
+</div>	
+
+	
+<div>
 		<form action="{{ url_for('tri') }}" method="post">
-			<input class ="bouton_tri" type="submit" value="trier par nombre" name="nb_ex" />
-			<input class ="bouton_tri" type="submit" value="trier par émetteur" name="tri_emet" />
-			<input class ="bouton_tri" type="submit" value="trier par type" name="tri_type_p" />
-			<input class ="bouton_tri" type="submit" value="trier par date" name="tri_date" />
-			<input class ="bouton_tri" type="submit" value="trier par devise monétaire" name="tri_dev" />
-			<input class ="bouton_tri" type="submit" value="trier par composition" name="tri_comp" />
-			<input class ="bouton_tri" type="submit" value="trier par poids" name="tri_pds" />
-			<input class ="bouton_tri" type="submit" value="trier par dimension" name="tri_dim" />
-			<input class ="bouton_tri" type="submit" value="trier par épaisseur" name="tri_ep" />
-			<input class ="bouton_tri" type="submit" value="trier par forme" name="tri_forme" />
-			<input class ="bouton_tri" type="submit" value="trier par démonétisation" name="tri_demo" />
-			<input class ="bouton_tri" type="submit" value="trier par indice de rareté Numista" name="tri_idr" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par nombre" name="nb_ex" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par émetteur" name="tri_emet" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par type" name="tri_type_p" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par date" name="tri_date" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par devise monétaire" name="tri_dev" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par composition" name="tri_comp" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par poids" name="tri_pds" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par dimension" name="tri_dim" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par épaisseur" name="tri_ep" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par forme" name="tri_forme" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par démonétisation" name="tri_demo" />
+			<input id="bouton_pieceotheque" class ="bouton_tri" type="submit" value="trier par indice de rareté Numista" name="tri_idr" />
 		</form>
 </div>
 
@@ -44,6 +48,8 @@
 {% endfor %}
 
 
-<a href="{{ url_for('recherche') }}"> Faire une recherche précise.</a>
+<footer>
+	<a href="{{ url_for('recherche') }}"> Faire une recherche précise.</a>
+</footer>
 
 {% endblock %}
