--- a/SQL/projet/templates/tri.html
+++ b/SQL/projet/templates/tri.html
@@ -6,13 +6,13 @@
 
 {% block content %}
 
-<p>{{ tri }}</p>
+<h3>{{ tri }}</h3>
 
 {% for result in repetition %}
 
 <a href="{{ url_for('piece', idP=result[0]) }}">
-	<img class="piece" src="{{result[14]}}" title="{{result[6]}}" alt="pièce n°{{result[0]}}">
-	<img class="piece" src="{{result[15]}}" title="{{result[6]}}" alt="pièce n°{{result[0]}}">
+	<img id="piece_tri" src="{{result[14]}}" title="{{result[6]}}" alt="pièce n°{{result[0]}}">
+	<img id="piece_tri" src="{{result[15]}}" title="{{result[6]}}" alt="pièce n°{{result[0]}}">
 	<p> {{ cle[0] }} : {{ result[cle[1]] }} </p>
 </a>
 {% endfor %}
