--- a/SQL/projet/templates/vide.html
+++ b/SQL/projet/templates/vide.html
@@ -5,7 +5,7 @@
 {% block title %}Il n'y a rien ici{% endblock %}
 
 {% block content %}
-<img src="static\404.png"> </img>
+<img src="static\404.png" alt="Stormtrooper en pixel avec écrit 404">
 <p>Pas de résultats, veuillez <a href="{{ url_for('recherche') }}"> réessayer.</a></p>
 
 
