commentaire fini, reste plus que l'enregistrement

--- a/SQL/projet/static/css_accueil.css
+++ b/SQL/projet/static/css_accueil.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("coin_flip.gif");
+    background-image: url("coin_flip.gif"); /* gif venant de GIPHY.com */
     background-size: 50vw;
 }
 
