--- a/SQL/projet/templates/tri.html
+++ b/SQL/projet/templates/tri.html
@@ -10,10 +10,11 @@
 
 {% for result in repetition %}
 
-<a href="{{ url_for('piece', idP=result[0]) }}">
+<!-- affiche l'avers et le revers de la pièce ainsi que sa catégorie selon le tri -->
+<a href="{{ url_for('piece', idP=result[0]) }}" id="lien_tri">
 	<img id="piece_tri" src="{{result[14]}}" title="{{result[6]}}" alt="pièce n°{{result[0]}}">
 	<img id="piece_tri" src="{{result[15]}}" title="{{result[6]}}" alt="pièce n°{{result[0]}}">
-	<p> {{ cle[0] }} : {{ result[cle[1]] }} </p>
+	<p> {{ cle[0] }} : {{ result[cle[1]] }} </p> <!-- cle c'est la cle de tri et  result[cle] est l'élement de la pièce qui a été trié -->
 </a>
 {% endfor %}
 
