--- a/SQL/projet/templates/piece.html
+++ b/SQL/projet/templates/piece.html
@@ -9,13 +9,15 @@
 {% for result in repetition %}
 
 <!-- bouton pour retourner à l'accueil -->
-<a href="{{ url_for('accueil') }}"> 
-<img src="static\maison dollar.png" id="bouton_accueil">
-</a> 
+
  
 <div>
 	<h1>{{result[1]}}</h1>
 
+	<a href="{{ url_for('accueil') }}"> 
+	<img src="{{url_for('static', filename= 'maison_dollar.png')}}" id="bouton_accueil" alt="maison pour retour accueil">
+	</a> 
+	
 	<p> <!-- liste des différentes caractériqtiques de la pièce -->
 		<ul id="liste">
 			<li>Nom : {{result[1]}}</li>
@@ -45,8 +47,7 @@
 {% endfor %}
 
 <footer>
-	Les résultats ne vous satisfassent pas ?
-	<a href="{{ url_for('recherche') }}"> Recommencez alors !</a>
+	<a href="{{ url_for('recherche') }}"> Les résultats ne vous satisfaissent pas ? </a>
 </footer>
 
 {% endblock %}
