--- a/SQL/projet/templates/resultats.html
+++ b/SQL/projet/templates/resultats.html
@@ -11,8 +11,8 @@
 
 <!-- affiche la  liste en image des résultats obtenus -->
 {% for result in repetition %}
-<a href="{{ url_for('piece', idP=result[0]) }}"> <img id="piece_pieceotheque" src="{{result[14]}}" alt="pièce n°{{result[0]}}"> </a> 
-<a href="{{ url_for('piece', idP=result[0]) }}"> <img id="piece_pieceotheque" src="{{result[15]}}" alt="pièce n°{{result[0]}}"> </a>	
+<a href="{{ url_for('piece', idP=result[0]) }}" class="liens"> <img id="piece_pieceotheque" src="{{result[14]}}" alt="pièce n°{{result[0]}}"> </a> 
+<a href="{{ url_for('piece', idP=result[0]) }}" class="liens"> <img id="piece_pieceotheque" src="{{result[15]}}" alt="pièce n°{{result[0]}}"> </a>	
 {% endfor %}
 
 <footer>
