--- a/SQL/projet/templates/enregistrement.html
+++ b/SQL/projet/templates/enregistrement.html
@@ -6,6 +6,9 @@
 
 {% block content %}
 
+<h1>Enregistrement de nouvelles pièces</h1>
+
+<!-- bouton pour retourner à l'accueil -->
 <a href="{{ url_for('accueil') }}"> 
 <img src="{{url_for('static', filename= 'maison_dollar.png')}}" id="bouton_accueil" alt="maison pour retour accueil">
 </a> 
