--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -35,7 +35,7 @@
 		<select name="typ">
 				<option value="">--- selectionnez  --- </option> <!-- option vide pour quand la personne ne sais pas-->
 				<option value="Piece courante"> Pièce courante</option>
-                <option value="Essaie"> Essaie</option>
+                <option value="Essai"> Essai</option>
 			
 		</select>
 	</li>
